; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_r6040.c_r6040_init_txbufs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_r6040.c_r6040_init_txbufs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.r6040_private = type { i32, i32, i32, i32, i32 }

@TX_DCNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @r6040_init_txbufs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @r6040_init_txbufs(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.r6040_private*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.r6040_private* @netdev_priv(%struct.net_device* %4)
  store %struct.r6040_private* %5, %struct.r6040_private** %3, align 8
  %6 = load i32, i32* @TX_DCNT, align 4
  %7 = load %struct.r6040_private*, %struct.r6040_private** %3, align 8
  %8 = getelementptr inbounds %struct.r6040_private, %struct.r6040_private* %7, i32 0, i32 4
  store i32 %6, i32* %8, align 4
  %9 = load %struct.r6040_private*, %struct.r6040_private** %3, align 8
  %10 = getelementptr inbounds %struct.r6040_private, %struct.r6040_private* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.r6040_private*, %struct.r6040_private** %3, align 8
  %13 = getelementptr inbounds %struct.r6040_private, %struct.r6040_private* %12, i32 0, i32 2
  store i32 %11, i32* %13, align 4
  %14 = load %struct.r6040_private*, %struct.r6040_private** %3, align 8
  %15 = getelementptr inbounds %struct.r6040_private, %struct.r6040_private* %14, i32 0, i32 3
  store i32 %11, i32* %15, align 4
  %16 = load %struct.r6040_private*, %struct.r6040_private** %3, align 8
  %17 = getelementptr inbounds %struct.r6040_private, %struct.r6040_private* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.r6040_private*, %struct.r6040_private** %3, align 8
  %20 = getelementptr inbounds %struct.r6040_private, %struct.r6040_private* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @TX_DCNT, align 4
  %23 = call i32 @r6040_init_ring_desc(i32 %18, i32 %21, i32 %22)
  ret void
}

declare dso_local %struct.r6040_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @r6040_init_ring_desc(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
